review och fix på UpdateDataModel
