# TodoService/js/app.js
@@ -33,33 +33,6 @@ class main {
                 debug('error in getting the connection pool');
                 throw err;
             }
-            const SystemFields = [
-                new h.Helpers.SqlField({
-                    name: 'id',
-                    type: sql.BigInt,
-                }),
-                new h.Helpers.SqlField({
-                    name: 'title',
-                    type: sql.NVarChar(100),
-                }),
-            ];
-            const SystemTable = new sqlTableType_1.SqlTableType({
-                connectionPool: pool,
-                tableName: 'System',
-                viewName: 'System',
-                fields: SystemFields,
-                autoGeneratedPrimaryKey: true,
-                throwOnExtraFields: true,
-            });
-            const sy = new baseRouter.BaseRouter({
-                table: SystemTable,
-                disableGetAll: false,
-                disablePost: false,
-                disablePut: false,
-                disablePatch: true,
-                disableDelete: false,
-            });
-            app.use('/Systems', sy.router);
             const categoryFields = [
                 new h.Helpers.SqlField({
                     name: 'id',
@@ -80,8 +53,8 @@ class main {
             ];
             const categoryOneTable = new sqlTableType_1.SqlTableType({
                 connectionPool: pool,
-                tableName: 'categoryOne',
-                viewName: 'categoryOne',
+                tableName: 'categoryOnes',
+                viewName: 'categoryOnes',
                 fields: categoryFields,
                 autoGeneratedPrimaryKey: true,
                 throwOnExtraFields: true,
@@ -97,8 +70,8 @@ class main {
             app.use('/categoryOnes', crOne.router);
             const categoryTwoTable = new sqlTableType_1.SqlTableType({
                 connectionPool: pool,
-                tableName: 'categoryTwo',
-                viewName: 'categoryTwo',
+                tableName: 'categoryTwos',
+                viewName: 'categoryTwos',
                 fields: categoryFields,
                 autoGeneratedPrimaryKey: true,
                 throwOnExtraFields: true,
@@ -178,6 +151,33 @@ class main {
             });
             app.use('/todos', todosRouter.router);
         });
+        const SystemFields = [
+            new h.Helpers.SqlField({
+                name: 'id',
+                type: sql.BigInt,
+            }),
+            new h.Helpers.SqlField({
+                name: 'title',
+                type: sql.NVarChar(100),
+            }),
+        ];
+        const SystemTable = new sqlTableType_1.SqlTableType({
+            connectionPool: pool,
+            tableName: 'SourceSystems',
+            viewName: 'SourceSystems',
+            fields: SystemFields,
+            autoGeneratedPrimaryKey: true,
+            throwOnExtraFields: true,
+        });
+        const sy = new baseRouter.BaseRouter({
+            table: SystemTable,
+            disableGetAll: false,
+            disablePost: false,
+            disablePut: false,
+            disablePatch: true,
+            disableDelete: false,
+        });
+        app.use('/Systems', sy.router);
         const port = process.env.PORT || 3000;
         app.listen(port, function () {
             debug(`listening on port ${port}`);
