# TodoService/src/app.ts
@@ -39,36 +39,6 @@ class main {
         throw err;
       }
 
-      const SystemFields: h.Helpers.SqlField[] = [
-        new h.Helpers.SqlField({
-          name: 'id',
-          type: sql.BigInt,
-        }),
-        new h.Helpers.SqlField({
-          name: 'title',
-          type: sql.NVarChar(100),
-        }),
-      ];
-
-      const SystemTable: SqlTableType = new SqlTableType({
-        connectionPool: pool,
-        tableName: 'System',
-        viewName: 'System',
-        fields: SystemFields,
-        autoGeneratedPrimaryKey: true,
-        throwOnExtraFields: true,
-      });
-      const sy: baseRouter.BaseRouter = new baseRouter.BaseRouter({
-        table: SystemTable,
-        disableGetAll: false,
-        disablePost: false,
-        disablePut: false,
-        disablePatch: true,
-        disableDelete: false,
-      });
-      app.use('/Systems',sy.router);
-
-
       const categoryFields: h.Helpers.SqlField[] = [
         new h.Helpers.SqlField({
           name: 'id',
@@ -89,8 +59,8 @@ class main {
       ];
       const categoryOneTable: SqlTableType = new SqlTableType({
         connectionPool: pool,
-        tableName: 'categoryOne',
-        viewName: 'categoryOne',
+        tableName: 'categoryOnes',
+        viewName: 'categoryOnes',
         fields: categoryFields,
         autoGeneratedPrimaryKey: true,
         throwOnExtraFields: true,
@@ -107,8 +77,8 @@ class main {
 
       const categoryTwoTable: SqlTableType = new SqlTableType({
         connectionPool: pool,
-        tableName: 'categoryTwo',
-        viewName: 'categoryTwo',
+        tableName: 'categoryTwos',
+        viewName: 'categoryTwos',
         fields: categoryFields,
         autoGeneratedPrimaryKey: true,
         throwOnExtraFields: true,
@@ -196,6 +166,34 @@ class main {
       });
       app.use('/todos', todosRouter.router);
     });
+
+    const SystemFields: h.Helpers.SqlField[] = [
+      new h.Helpers.SqlField({
+        name: 'id',
+        type: sql.BigInt,
+      }),
+      new h.Helpers.SqlField({
+        name: 'title',
+        type: sql.NVarChar(100),
+      }),
+    ];
+    const SystemTable: SqlTableType = new SqlTableType({
+      connectionPool: pool,
+      tableName: 'SourceSystems',
+      viewName: 'SourceSystems',
+      fields: SystemFields,
+      autoGeneratedPrimaryKey: true,
+      throwOnExtraFields: true,
+    });
+    const sy: baseRouter.BaseRouter = new baseRouter.BaseRouter({
+      table: SystemTable,
+      disableGetAll: false,
+      disablePost: false,
+      disablePut: false,
+      disablePatch: true,
+      disableDelete: false,
+    });
+    app.use('/Systems',sy.router);
 
     const port = process.env.PORT || 3000;
     app.listen(port, function(): void {
